Fixed the align items and margin

--- a/css/main.css
+++ b/css/main.css
@@ -31,9 +31,8 @@ ul {
 li {
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
-  flex-wrap: wrap-reverse;
-  width: 16rem;
+  align-items: center;
+  margin: 0 0 1.5rem;
 }
 
 a  {
